# bwe_dnn

./: .gitignore  README.md  pyproject.toml  requirements.txt
bwe/: __init__.py  config.py  losses.py
bwe/data/: __init__.py  augment.py  cache.py  loaders.py  pipeline.py  splits.py
bwe/dsp/: __init__.py  bandlimit.py  compress.py  copyup.py  stft.py
bwe/eval/: __init__.py  aggregate.py  metrics.py  plots.py
bwe/infer/: __init__.py  reconstruct.py
bwe/models/: __init__.py  discriminator.py  generator.py
bwe/tests/: conftest.py  test_aggregate.py  test_bandlimit.py  test_compress.py  test_copyup.py  test_discriminator.py  test_gan_losses.py  test_gan_train_step.py  test_generator.py  test_loaders.py  test_losses.py  test_metrics.py  test_pipeline.py  test_reconstruct.py  test_splits.py  test_stft.py
bwe/train/: __init__.py  checkpointing.py  gan.py  regression.py
notebooks/: 01_dsp.ipynb  02_copyup_baseline.ipynb  03_gan.ipynb  03_regression.ipynb  04_gan.ipynb  kaggle_train_gan.ipynb  kaggle_train_regression.ipynb  p2_dsp_grafiken.ipynb  p3_copyup_grafiken.ipynb  p4_modelle_grafiken.ipynb
scripts/: check_dataset.py  prepare_sample.py
